--- a/Landing Page 02/consultoria.html
+++ b/Landing Page 02/consultoria.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Landing page 02</title>
+    <title>Consultória</title>
 </head>
 <body>
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="#">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li class="dropdown">
                     <a href="">Serviços</a>
                     <ul class="dropdown-content">
@@ -25,14 +25,20 @@
         </nav>
     </header>
 
-    <main>
-        <section class="content">
-            <h1>Bem-vindo á nossa página</h1>
-            <p>Estamos aqui para oferecer os melhores serviços para você.</p>
-            <img src="img/img.jpg" alt="Imagem de um computador">
-        </section>
-    </main>
+    <div class="arroz">
+        <h1 class="">Donzela</h1>
+        <img src="img/image2.jpg" alt="Imagem do Filme" class="movie-image">
+        <p class="movie-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus, quis.</p>
 
+        <h1 class="">Donzela</h1>
+        <img src="img/image2.jpg" alt="Imagem do Filme" class="movie-image">
+        <p class="movie-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus, quis.</p>
+
+        <h1 class="">Donzela</h1>
+        <img src="img/image2.jpg" alt="Imagem do Filme" class="movie-image">
+        <p class="movie-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus, quis.</p>
+    </div>
+    
     <footer>
         <p>&copy; 2024 - Todos os direitos reservados.</p>
     </footer>
