--- a/Landing Page 02/desenvolvimento.html
+++ b/Landing Page 02/desenvolvimento.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Landing page 02</title>
+    <title>Desenvolvimento</title>
 </head>
 <body>
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="#">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li class="dropdown">
                     <a href="">Serviços</a>
                     <ul class="dropdown-content">
@@ -25,14 +25,9 @@
         </nav>
     </header>
 
-    <main>
-        <section class="content">
-            <h1>Bem-vindo á nossa página</h1>
-            <p>Estamos aqui para oferecer os melhores serviços para você.</p>
-            <img src="img/img.jpg" alt="Imagem de um computador">
-        </section>
-    </main>
-
+    <!-- Notas de desenvolvimento, Relatórios e Métricas, Comunicação e contato, Atualizações e notificações e etc -->
+    <div class=""></div>
+    
     <footer>
         <p>&copy; 2024 - Todos os direitos reservados.</p>
     </footer>
