--- a/Landing Page 02/sobre.html
+++ b/Landing Page 02/sobre.html
@@ -10,13 +10,13 @@
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="#">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li class="dropdown">
                     <a href="">Serviços</a>
                     <ul class="dropdown-content">
                         <li><a href="consultoria.html">Consultoria</a></li>
-                        <li><a href="#">Suporte</a></li>
-                        <li><a href="#">Desenvolvimento</a></li>
+                        <li><a href="suporte.html">Suporte</a></li>
+                        <li><a href="desenvolvimento.html">Desenvolvimento</a></li>
                     </ul>
                 </li>
                 <li><a href="sobre.html">Sobre</a></li>
@@ -29,28 +29,28 @@
         <section class="about">
             <h1>Sobre Nós</h1>
             <p>
-                Millie Bobby Brown, nascida em 19 de fevereiro de 2004, em Marbella, Espanha, ganhou fama mundial como Eleven na série “Stranger Things”. Jovem e talentosa, ela se destaca também como empreendedora e ativista, defendendo causas como a igualdade de gênero e o combate ao bullying. Sua habilidade e influência a tornaram uma das figuras mais promissoras de Hollywood.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus quisquam est maxime suscipit quidem veniam iure dolore culpa a ipsum voluptatem incidunt cum nesciunt ab, laudantium debitis laboriosam! Officiis, neque!
             </p>
         </section>
 
         <section class="mission">
             <h2>Missão, Visão e Valores</h2>
-            <div clas="mission-values">
+            <div class="mission-values">
                 <div class="mission-item">
                     <h3>Missão</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil itaque ea fugiat hic ipsum corporis nisi dolorem voluptatibus. Libero ipsum aspernatur porro architecto quisquam quaerat ea magnam quibusdam reprehenderit modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat quasi saepe voluptatum sequi consequatur ducimus dolor, similique suscipit, accusamus in aliquid ipsa necessitatibus voluptate, soluta a esse? Saepe, exercitationem adipisci!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus facere quos reiciendis tenetur, nostrum rem architecto ex hic consequatur doloribus aspernatur? Voluptas quibusdam facere dolorum sit minima animi ullam nihil.</p>
                 </div>
                 <div class="mission-item">
                     <h3>Visão</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, ipsam! Quas eos excepturi molestias suscipit nihil a earum impedit asperiores, non, quo, quisquam ab natus voluptas optio possimus aliquid ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque fugiat reiciendis nulla ipsa odit deserunt voluptates velit adipisci laboriosam, minima et temporibus repellendus, neque atque voluptate quidem? Illo, aliquam nemo.</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi pariatur a saepe repudiandae recusandae non quod esse aliquam accusantium ipsa? Architecto unde eum error ducimus quo nisi in fugit nostrum.</p>
                 </div>
                 <div class="mission-item">
                     <h3>Valores</h3>
                     <ul>
-                        <li>Qualidade em todos os processos</li>
-                        <li>Inovação contínua</li>
-                        <li>Foco no cliente</li>
-                        <li>Ética e transparência</li>
+                        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus, id.</li>
+                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, velit.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, aliquam.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, error.</li>
                     </ul>
                 </div>
             </div>
