--- a/Validação Forms/index.html
+++ b/Validação Forms/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="src/css/styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -28,5 +28,7 @@
             <p id="error-message"></p>
         </form>
     </div>
+
+    <script src="src/js/scripts.js"></script>
 </body>
 </html>
